fixed yahtzee spacing

--- a/src/Components/yahtzee-scoreboard.css
+++ b/src/Components/yahtzee-scoreboard.css
@@ -37,7 +37,7 @@
   border-bottom: 4px solid #06d6a0;
   border-right: 4px solid #06d6a0;
   border-bottom-right-radius: 0px;
-  padding: 2px 0px 5px 0px;
+  padding: 2px 0px 7px 0px;
 }
 
 .score-total-values {
@@ -54,7 +54,6 @@
   justify-content: center;
   width: 40%;
   font-size: 2.2rem;
-  margin-bottom: 5px;
 }
 
 .score-total-names {
